change button layout

--- a/M1Spline/index.html
+++ b/M1Spline/index.html
@@ -329,7 +329,7 @@
             style="border: 1px solid #000000"
           ></canvas>
         </td>
-        <td>
+        <td style="display: flex;flex-direction: column;margin-left: 0px;">
           <b>
           <input
             type="button"
@@ -337,13 +337,13 @@
             onclick="move_point()"
             value="move"
           /></b><br>
-          <input
+          <input style="margin-top: -10px"
             type="button"
             id="add_point"
             onclick="add_point()"
             value="add"
           /><br>
-          <input
+          <input style="margin-top: -10px"
             type="button"
             id="rem_point"
             onclick="remove_point()"
